apps/project/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  namespace: project
  name: project-rollout
spec:
  replicas: 4
  selector:
    matchLabels:
      app: project-backend
    strategy:
      canary:
        steps:
        - setWeight: 25
        - pause:
            duration: 150s
        - setWeight: 50
        - pause:
            duration: 150s
        - setWeight: 75
        - pause:
            duration: 150s
        - setWeight: 100
        - pause:
            duration: 150s
    template:
        metadata:
          labels:
            app: project-backend
        spec:
          volumes:
            - name: project-pvolume
              persistentVolumeClaim:
                claimName: project-claim
          containers:
            - name: project-backend
              image: heseduud/projectbackend:4.02v5
              volumeMounts:
                - name: project-pvolume
                  mountPath: /usr/src/app/files
              readinessProbe:
                initialDelaySeconds: 10
                periodSeconds: 5
                httpGet:
                  path: /healthz
                  port: 5000
              livenessProbe:
                initialDelaySeconds: 20
                periodSeconds: 5
                httpGet:
                  path: /healthz
                  port: 5000
